methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: object java.awt.Color is not a value
  var c=Color ; var e =false ;
        ^