methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var c=Color ; var e =false ;
  avance();
  c = getCouleurSol();
  recule() ;
  if (c == Color.green) {e=true;}
  return(e);
    // Write your code here
}